updates to html and css

--- a/index.html
+++ b/index.html
@@ -1,95 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Arianna Buller's Portfolio</title>
 </head>
+
 <body>
     <nav>
         <a href="link-home">Home</a>
         <a href="link-about">About</a>
         <a href="link-contact">Contact</a>
     </nav>
-<div class="content">
-    <h1>Hello!</h1>
-    <h1>I'm Arianna Buller</h1>
-    <img class="profilePic" src="./images/possible portfolio photo.JPG" alt="Arianna in big white hat and red dress">
 
-    <p>I’m a UX designer who loves coffee and creating usable digital products. </p>
-    <button>Resume</button>
-</div>
+    <section class="intro">
+        <div class="content">
+            <h1>Hello!</h1>
+            <h1>I'm Arianna Buller</h1>
+            <img class="profilePic" src="./images/possible portfolio photo.JPG"
+                alt="Arianna in big white hat and red dress">
+            <p>I’m a UX designer who loves coffee and creating usable digital products. </p>
+            <button>Resume</button>
+        </div>
+    </section>
 
-<section class="myWork">
-    <h1>My Work</h1>
-    <div class="workGrid">  
-        <div class="homehelper">
-        <img class="mobilePic" src="./images/HomeHelper phone photo.PNG" alt="Someone holding a phone with HomeHelper app open">
-         <h2>Mobile Prototype</h2>
-         <h3>HomeHelper</h3>
-         <p>"Home maintenance, made easy"</p>
-        <p>Home maintenance has its challenges! What if we could make home maintenance tasks easier and 
-        provide an organized home system all in one? In this project, I worked with a team to develop a home maintenance app to empower overwhelmed homeowners.  </p>
-        <button>View Project</button>
-        </div>
+    <section class="myWork">
+        <h1>My Work</h1>
+        <div class="workGrid">
+            <div class="homehelper">
+                <img class="mobilePic" src="./images/HomeHelper phone photo.PNG"
+                    alt="Someone holding a phone with HomeHelper app open">
+                <h2>Mobile Prototype</h2>
+                <h3>HomeHelper</h3>
+                <p>"Home maintenance, made easy"</p>
+                <p>Home maintenance has its challenges! What if we could make home maintenance tasks easier and
+                    provide an organized home system all in one? In this project, I worked with a team to develop a home
+                    maintenance app to empower overwhelmed homeowners. </p>
+                <button>View Project</button>
+            </div>
 
-        <div class="vac">
-        <img class="desktopPic" src="./images/VAC desktop.PNG" alt="Veterans Airlift Command website up on a desktop computer">
-        <h2>Desktop Prototype</h2>
-        <h3>Veterans Airlift Command</h3>
-        <p>"They have heart, they need wings"</p>
-        <p>Impactful nonprofits don’t always have the digital representation they deserve. In this project, I worked with a team to transform the user experience 
-        digitally for this nonprofit by redesigning their website to allow for users to better access the many resources available to them. 
-        </p>
-        <button>View Project</button>
-        </div>
+            <div class="vac">
+                <img class="desktopPic" src="./images/VAC desktop.PNG"
+                    alt="Veterans Airlift Command website up on a desktop computer">
+                <h2>Desktop Prototype</h2>
+                <h3>Veterans Airlift Command</h3>
+                <p>"They have heart, they need wings"</p>
+                <p>Impactful nonprofits don’t always have the digital representation they deserve. In this project, I
+                    worked with a team to transform the user experience
+                    digitally for this nonprofit by redesigning their website to allow for users to better access the
+                    many resources available to them.
+                </p>
+                <button>View Project</button>
+            </div>
 
-        <div class="caribou">
-        <img class="watchPic" src="./images/Carbiou apple watch.PNG" alt="Someone looking at thier apple watch with the caribou app">
-        <h2>Watch Prototype</h2>
-        <h3>Carbiou Coffee</h3>
-        <p>"Life is short. Stay awake for it"</p>
-        <p>Coffee, coffee, Coffee! What would it be like if you could order your favorite Caribou Coffee beverage right from your wrist? In this project, 
-        I had fun envisioning the process of ordering a cup of coffee from my favorite coffee shop on an Apple Watch. 
-        </p>
-        <button>View Project</button>
+            <div class="caribou">
+                <img class="watchPic" src="./images/Carbiou apple watch.PNG"
+                    alt="Someone looking at thier apple watch with the caribou app">
+                <h2>Watch Prototype</h2>
+                <h3>Carbiou Coffee</h3>
+                <p>"Life is short. Stay awake for it"</p>
+                <p>Coffee, coffee, Coffee! What would it be like if you could order your favorite Caribou Coffee
+                    beverage right from your wrist? In this project,
+                    I had fun envisioning the process of ordering a cup of coffee from my favorite coffee shop on an
+                    Apple Watch.
+                </p>
+                <button>View Project</button>
+            </div>
         </div>
-    </div>
-    <h3>View All Projects</h3>
-</section>
-<!-- My UX Skills section coded using CSS flex -->
-<section class="mySkills">
-    <h1>My UX Skills</h1>
-    <div class="flexContainer">
-        <div class="userExperience">
-        <img class="user" src="./images/user icon.png" alt="Icon of two people shaking hands">
-        <h2>User Experience</h2>
-        <p>Getting to know the users for each individual project is an intensive and fun process. I enjoy conducting interviews and taking 
-        a moment to connect with users and identify their needs through active listening and observations.  
-         </p>
-        </div>
+        <h3>View All Projects</h3>
+    </section>
+    <!-- My UX Skills section coded using CSS flex -->
+    <section class="mySkills">
+        <h1>My UX Skills</h1>
+        <div class="flexContainer">
+            <div class="userExperience">
+                <img class="user" src="./images/user icon.png" alt="Icon of two people shaking hands">
+                <h2>User Experience</h2>
+                <p>Getting to know the users for each individual project is an intensive and fun process. I enjoy
+                    conducting interviews and taking
+                    a moment to connect with users and identify their needs through active listening and observations.
+                </p>
+            </div>
 
-        <div class="wireframing">
-        <img class="wireframe"src="./images/sketching.png" alt="black and white icon showing wireframe">
-        <h2>Wireframing</h2>
-        <p>Taking the needs of the user and designing possible solutions on paper or as digital wireframes is a skill I enjoy. Personally, 
-        I like to sketch out ideas on paper first, then use Figma or XD to add more structure to the wireframes as they increase in fidelity. 
-        </p>
-        </div>
+            <div class="wireframing">
+                <img class="wireframe" src="./images/sketching.png" alt="black and white icon showing wireframe">
+                <h2>Wireframing</h2>
+                <p>Taking the needs of the user and designing possible solutions on paper or as digital wireframes is a
+                    skill I enjoy. Personally,
+                    I like to sketch out ideas on paper first, then use Figma or XD to add more structure to the
+                    wireframes as they increase in fidelity.
+                </p>
+            </div>
 
-        <div class="prototyping">
-        <img class="prototype" src="./images/prototyping icon.jpg" alt="Image showing wireframe on desktop screen">
-        <h2>Prototyping</h2>
-         <p>When it comes to putting the users flow into action, prototyping the wireframes together is really exciting! I enjoy making those
-         connections and seeing how the design comes to life.  
-        </p>
+            <div class="prototyping">
+                <img class="prototype" src="./images/prototyping icon.jpg"
+                    alt="Image showing wireframe on desktop screen">
+                <h2>Prototyping</h2>
+                <p>When it comes to putting the users flow into action, prototyping the wireframes together is really
+                    exciting! I enjoy making those
+                    connections and seeing how the design comes to life.
+                </p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 </body>
+
 </html>
