updates and added alternate profile picture

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
     <title>Arianna Buller's Portfolio</title>
 </head>
 
@@ -22,12 +25,14 @@
 
     <section class="intro">
         <div class="content">
-            <h1>Hello!</h1>
+            <h2>Hello!</h2>
             <h1>I'm Arianna Buller</h1>
-            <img class="profilePic" src="./images/possible portfolio photo.JPG"
-                alt="Arianna in big white hat and red dress">
             <p>I’m a UX designer who loves coffee and creating usable digital products. </p>
             <button>Resume</button>
+        </div>
+        <div>
+            <img class="profilePic" src="./images/possible portfolio photo.JPG"
+                alt="Arianna in big white hat and red dress">
         </div>
     </section>
 
