--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <h3>View All Projects</h3>
     </section>
-    <!-- My UX Skills section coded using CSS flex -->
+
     <section class="mySkills">
         <h1>My UX Skills</h1>
         <div class="flexContainer">
@@ -115,6 +115,11 @@
             </div>
         </div>
     </section>
+    <footer>
+        <a href="link-home">Home</a>
+        <a href="link-about">About</a>
+        <a href="link-contact">Contact</a>
+    </footer>
 </body>
 
 </html>
